# algotham-v2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
algotham/: backtest.py  order.py  policy.py  portfolio.py  strategy.py
algotham/utils/: logger.py
data/sample/: sample_btcjpy_buy_5min_230601.csv.gzip  sample_btcjpy_sell_5min_230601.csv.gzip
examples/: btcjpy_strategy_sample1.py
examples/notebooks/: algotham_v2_backtest_sample_strategy.ipynb  backtest_sample_strategy2.ipynb
tests/: test_backtest.py
