[tool.poetry]
name = "algotham-v2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "algotham"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.1.2"
fastprogress = "^1.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.1"
pytest = "^7.4.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
